<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.badmintonscorecounter.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_a"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/original_score" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="teamAScore"
                android:text="@string/add_one_point" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_b"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/original_score" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="teamBScore"
                android:text="@string/add_one_point" />
        </LinearLayout>

    </LinearLayout>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                android:layout_width="100dp"
                android:padding="10dip" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/game_one"
                android:textAllCaps="true" />

            <TextView
                android:layout_width="100dp"
                android:padding="3dip"
                android:text="@string/game_two"
                android:textAllCaps="true" />

            <TextView
                android:layout_width="100dp"
                android:padding="3dip"
                android:text="@string/game_three"
                android:textAllCaps="true" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/team_a"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/game1_a"
                android:padding="3dip"
                android:text="@string/original_score" />

            <TextView
                android:id="@+id/game2_a"
                android:padding="3dip"
                android:text="@string/original_score" />

            <TextView
                android:id="@+id/game3_a"
                android:padding="3dip"
                android:text="@string/original_score" />

        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/team_b"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/game1_b"
                android:padding="3dip"
                android:text="@string/original_score" />

            <TextView
                android:id="@+id/game2_b"
                android:padding="3dip"
                android:text="@string/original_score" />

            <TextView
                android:id="@+id/game3_b"
                android:padding="3dip"
                android:text="@string/original_score" />
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/winner" />
    </RelativeLayout>

</LinearLayout>
